starts weather screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">K-ForceOpenWeather</string>
     <string name="countryCodePrefix">country:</string>
+    <string name="generic_error">Error occurred, try again !</string>
 </resources>
